force-app/main/default/objects/Lab__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Labs</relationshipLabel>
    <relationshipName>Labs</relationshipName>
    <type>Lookup</type>
</CustomField>