force-app/main/default/objects/Lab__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>