force-app/main/default/objects/Lab__c/fields/Lab_Name__c.field-meta.xml
<CustomField>
    <fullName>Lab_Name__c</fullName>
    <label>Lab Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Floor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>